feat: implement AzureOpenAI Responses API client with comprehensive streaming tests and support for reasoning models.